[package]
name = "qLeaker"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "qLeaker.exe"
LegalCopyright = "Copyright Tehnology Utils © 2016"

[dependencies]
eframe = "0.22.0"
egui_extras = {version = "0.22.0", features = ["image"] }
ureq = "2.7.1"
serde_json = { version = "1.0.107", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
once_cell = "1.18.0"
open = "5.0.0"
hex = "0.4.3"
easy-hex = "0.1.2"
faster-hex = "0.8.1"
urlencoding = "2.1.3"
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
] }
